Correct style for imagePage on mobile

--- a/app/javascript/components/imagePage/imagePage.module.css
+++ b/app/javascript/components/imagePage/imagePage.module.css
@@ -45,6 +45,6 @@ img {
 
 @media (max-width: 595px) {
 	.imageWrapper {
-		display: initial;
+		align-items: start;
 	}
 }
